<resources>
    <string name="app_name">AppGym</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="activity_titulo">Titulo</string>
    <string name="activity_Contenido">Contenido</string>
    <string name="activity_contenido">Contenido</string>
    <string name="activity_agregar">Agregar</string>
    <string name="activity_mail">Email</string>
    <string name="activity_password">Contraseña</string>
    <string name="activity_ingresar">Ingresar</string>
    <string name="activity_registrarme">Registrarme</string>
    <string name="activity_welcome">Bienvenido</string>
    <string name="activity_email">Email</string>
    <string name="activity_nombres_apellidos">Nombres y Apellidos</string>
    <string name="activity_edad">Edad</string>
    <string name="activity_peso">Peso</string>
    <string name="activity_pais">País</string>
    <string name="activity_ciudad">Ciudad</string>
    <string name="activity_nombres">Nombres</string>
    <string name="activity_last_name">Apellidos</string>
    <string name="activity_age">Edad</string>
    <string name="activity_weight">Peso</string>
    <string name="activity_department">Departamento</string>
    <string name="activity_province">Provincia</string>
    <string name="activity_district">Distrito</string>
    <string name="activity_height">Estatura</string>
    <string name="empezar">Empezar Rutina</string>
    <string name="detalle_ejercicio">Detalles</string>
    <string name="option_yes">Si</string>
</resources>
